--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18",
     "react-icons": "^5.1.0",
     "react-intersection-observer": "^9.10.1",
-    "react-vertical-timeline-component": "^3.6.0"
+    "react-vertical-timeline-component": "^3.6.0",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "@types/node": "^20",
